GNOME Bugzilla – Bug 700530
Warning on startup
Last modified: 2013-05-17 16:29:18 UTC
Looks like a fallout of the argv move to gvariant. ** (gnome-control-center:26704): WARNING **: Ignoring additional parameters
Created attachment 244546 [details] [review] shell: Fix warnings for the GVariant-encoded parameters This fixes a spurious warning about ignored parameters due to the variant not being NULL since it now contains the flags dictionary.
Review of attachment 244546 [details] [review]: Looks good otherwise. ::: shell/cc-panel.c @@ +89,3 @@ + return; + + n_parameters = g_variant_n_children (parameters); Assign this in the check above: if (parameters == NULL) return; n_params = ... if (n_params == 0) return;
Created attachment 244550 [details] [review] shell: Fix warnings for the GVariant-encoded parameters This fixes a spurious warning about ignored parameters due to the variant not being NULL since it now contains the flags dictionary.
Review of attachment 244550 [details] [review]: Looks good.
The following fix has been pushed: 4e42a36 shell: Fix warnings for the GVariant-encoded parameters
Created attachment 244553 [details] [review] shell: Fix warnings for the GVariant-encoded parameters This fixes a spurious warning about ignored parameters due to the variant not being NULL since it now contains the flags dictionary.