shell: Fix warnings for the GVariant-encoded parameters

This fixes a spurious warning about ignored parameters due to the
variant not being NULL since it now contains the flags dictionary.

https://bugzilla.gnome.org/show_bug.cgi?id=700530